// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MD3 primitives in expyrico MD3Chip 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FAFAF8",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Dairy"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#D6F0E6",
          "borderColor": "#F5A623",
          "borderRadius": 10,
          "borderWidth": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "minWidth": 48,
          "paddingHorizontal": 12,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F5A623",
            "fontSize": 14,
            "fontWeight": "700",
          }
        }
      >
        Dairy
      </Text>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in expyrico MD3FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FAFAF8",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Scan"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F5A623",
          "borderRadius": 22,
          "height": 56,
          "justifyContent": "center",
          "minHeight": 56,
          "shadowColor": "rgba(44,44,40,0.10)",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 8,
          "width": 56,
        }
      }
    >
      <Text
        style={
          {
            "color": "#2C2C28",
            "fontSize": 18,
            "includeFontPadding": false,
            "lineHeight": 24,
            "textAlign": "center",
            "textAlignVertical": "center",
          }
        }
      >
        ⊟
      </Text>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in expyrico MD3ListRow 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FAFAF8",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Notifications. On"
      accessibilityRole="summary"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FAFAF8",
          "flexDirection": "row",
          "minHeight": 56,
          "paddingHorizontal": 18,
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#2C2C28",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          Notifications
        </Text>
        <Text
          style={
            {
              "color": "#8C8C85",
              "fontSize": 12,
            }
          }
        >
          On
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in expyrico MD3TextField 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FAFAF8",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "marginVertical": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#8C8C85",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Email
      </Text>
      <TextInput
        accessibilityLabel="Email"
        onChangeText={[Function]}
        style={
          {
            "backgroundColor": "#FAFAF8",
            "borderColor": "#F0F0ED",
            "borderRadius": 10,
            "borderWidth": 1,
            "color": "#2C2C28",
            "fontSize": 16,
            "minHeight": 48,
            "paddingHorizontal": 12,
          }
        }
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in expyricoDark MD3Chip 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#111512",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Dairy"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#1F342C",
          "borderColor": "#F5A623",
          "borderRadius": 10,
          "borderWidth": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "minWidth": 48,
          "paddingHorizontal": 12,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F5A623",
            "fontSize": 14,
            "fontWeight": "700",
          }
        }
      >
        Dairy
      </Text>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in expyricoDark MD3FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#111512",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Scan"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F5A623",
          "borderRadius": 22,
          "height": 56,
          "justifyContent": "center",
          "minHeight": 56,
          "shadowColor": "rgba(0,0,0,0.34)",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 10,
          "width": 56,
        }
      }
    >
      <Text
        style={
          {
            "color": "#2C2C28",
            "fontSize": 18,
            "includeFontPadding": false,
            "lineHeight": 24,
            "textAlign": "center",
            "textAlignVertical": "center",
          }
        }
      >
        ⊟
      </Text>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in expyricoDark MD3ListRow 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#111512",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Notifications. On"
      accessibilityRole="summary"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#191F1B",
          "flexDirection": "row",
          "minHeight": 56,
          "paddingHorizontal": 18,
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FAFAF8",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          Notifications
        </Text>
        <Text
          style={
            {
              "color": "#B7BDB7",
              "fontSize": 12,
            }
          }
        >
          On
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in expyricoDark MD3TextField 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#111512",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "marginVertical": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#B7BDB7",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Email
      </Text>
      <TextInput
        accessibilityLabel="Email"
        onChangeText={[Function]}
        style={
          {
            "backgroundColor": "#191F1B",
            "borderColor": "#2D3A34",
            "borderRadius": 10,
            "borderWidth": 1,
            "color": "#FAFAF8",
            "fontSize": 16,
            "minHeight": 48,
            "paddingHorizontal": 12,
          }
        }
        value=""
      />
    </View>
  </View>
</View>
`;
